fixed pom.xml for unix system